<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="url_android_dev" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email" translatable="false">praktikum@support.yandex.ru</string>
    <string name="url_user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_line">Search</string>
    <string name="media_library_line">Media library</string>
    <string name="settings_line">Settings</string>
    <string name="back_line">Back</string>
    <string name="dark_theme_line">Dark theme</string>
    <string name="share_app_line">Share app</string>
    <string name="support_line">Write to support</string>
    <string name="user_agreement_line">User agreement</string>
    <string name="support_email_subject">Message to the developers and developers of the Playlist Maker app</string>
    <string name="support_email_body">Thanks to the developers for the cool app!</string>
    <string name="clear_line">Clear</string>
    <string name="nothing_found">Nothing was found</string>
    <string name="communication_problems">Communication problems\n\nThe download failed. Check your internet connection</string>
    <string name="app_not_found">No suitable application was found</string>
    <string name="refresh_line">Refresh</string>
    <string name="find_line">You were looking for</string>
    <string name="clear_track_history_line">Clear the history</string>
    <string name="duration_line">Duration</string>
    <string name="album_line">Album</string>
    <string name="year_line">Year</string>
    <string name="genre_line">Genre</string>
    <string name="country_line">Country</string>
    <string name="favorite_tracks_empty_line">Your library is empty</string>
    <string name="playlists_empty_line">You haven\'t created any playlists</string>
    <string name="new_playlist_line">New playlist</string>
    <string name="favorite_track_line">Favorite tracks</string>
    <string name="playlists_line">Playlists</string>
    <string name="new_playlist_title_line">Title*</string>
    <string name="new_playlist_description_line">Description</string>
    <string name="new_playlist_create_line">Create</string>
    <string name="playlist_created_message_line">Playlist %s created</string>
    <string name="finish_creating_playlist_title_line">Complete playlist creation?</string>
    <string name="unsaved_data_line">All unsaved data will be lost</string>
    <string name="finish_line">Complete</string>
    <string name="cancel_line">Cancel</string>
    <plurals name="track_count">
        <item quantity="one">%d track</item>
        <item quantity="few">%d tracks</item>
        <item quantity="many">%d tracks</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <string name="add_to_playlist_line">Add to playlist</string>
    <string name="added_to_playlist_line">Added to playlist %s</string>
    <string name="already_in_playlist_line">Track already in playlist %s</string>
    <plurals name="duration_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="few">%d minutes</item>
        <item quantity="many">%d minutes</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="less_minute">less than a minute</string>
    <string name="delete_track_line">Do you want to delete a track?</string>
    <string name="yes_line">Yes</string>
    <string name="no_line">No</string>
    <string name="share_line">Share</string>
    <string name="edit_information_line">Edit Information</string>
    <string name="delete_playlist_line">Delete playlist</string>
    <string name="empty_playlist_line">There is no track list to share in this playlist</string>
    <string name="delete_playlist_question">Do you want to delete a playlist?</string>
    <string name="edit_playlist_line">Edit</string>
    <string name="save_editing_playlist_line">Save</string>
</resources>