<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/padding_12"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="@dimen/icon_24"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="22sp" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_16"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/search_line"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/size_22"
        app:cornerRadius="@dimen/padding_16"
        app:icon="@drawable/ic_search_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/media_library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginBottom="@dimen/padding_16"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/media_library_line"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/size_22"
        app:cornerRadius="@dimen/padding_16"
        app:icon="@drawable/ic_library_25_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:text="@string/settings_line"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/size_22"
        app:cornerRadius="@dimen/padding_16"
        app:icon="@drawable/ic_settings_24"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />
</LinearLayout>


