<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_night"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.library.ui.CreatePlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_playlist_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:title="@string/new_playlist_line"
        app:titleTextAppearance="@style/TitleStyle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/add_photo_button"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:background="@null"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@id/new_playlist_title_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_toolbar">

        <ImageView
            android:id="@+id/playlist_cover_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:visibility="gone" />

        <ImageView
            android:background="@drawable/add_new_photo_button_border"
            android:id="@+id/add_photo_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_add_photo_100" />

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/new_playlist_title_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/new_playlist_description_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_photo_button">

        <EditText
            android:id="@+id/new_playlist_title_input"
            style="@style/AddNewPlaylistEditStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/new_playlist_title_line"
            android:importantForAutofill="no"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/new_playlist_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="54dp"
            android:background="@color/white_night"
            android:fontFamily="@font/ys_display_regular"
            android:paddingHorizontal="3dp"
            android:text="@string/new_playlist_title_line"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:visibility="gone" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/new_playlist_description_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_playlist_title_container">

        <EditText
            android:id="@+id/new_playlist_description_input"
            style="@style/AddNewPlaylistEditStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/new_playlist_description_line"
            android:importantForAutofill="no"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/new_playlist_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="54dp"
            android:background="@color/white_night"
            android:fontFamily="@font/ys_display_regular"
            android:paddingHorizontal="3dp"
            android:text="@string/new_playlist_description_line"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:visibility="gone" />
    </FrameLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_new_playlist_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/add_new_playlist_create_button_selector"
        android:enabled="false"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/new_playlist_create_line"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="500"
        android:textSize="@dimen/size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>