<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/big_track_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_night">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/icon_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/icon_24" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/art_work"/>

    <ImageView
        android:id="@+id/art_work"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/padding_42"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/icon_24"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_22"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/art_work"
        tools:text="Очень длинное название песни Очень длинное название песни" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_14"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tools:text="Очень длинное имя исполнителя" />

    <ImageButton
        android:id="@+id/add_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:src="@drawable/add_button_51"
        app:layout_constraintBottom_toTopOf="@id/track_time"
        app:layout_constraintEnd_toStartOf="@+id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/play_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:src="@drawable/play_button_100"
        app:layout_constraintBottom_toBottomOf="@+id/add_button"
        app:layout_constraintBottom_toTopOf="@id/track_time"
        app:layout_constraintEnd_toStartOf="@+id/favorite_button"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/favorite_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:src="@drawable/favorite_button_51"
        app:layout_constraintBottom_toTopOf="@id/track_time"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toEndOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <TextView
        android:id="@+id/track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="500"
        android:textSize="@dimen/size_14"
        app:layout_constraintBottom_toTopOf="@id/duration"
        app:layout_constraintEnd_toEndOf="@id/right_border"
        app:layout_constraintStart_toStartOf="@id/left_border"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        tools:text="5:21" />

    <TextView
        android:id="@+id/duration_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:layout_marginBottom="@dimen/padding_8"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/album_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_time"
        tools:text="5:02" />

    <TextView
        android:id="@+id/album_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_8"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/year_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_value"
        tools:text="Ария" />

    <TextView
        android:id="@+id/year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_8"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/genre_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_value"
        tools:text="2005" />

    <TextView
        android:id="@+id/genre_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_8"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/country_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_value"
        tools:text="Рок" />

    <TextView
        android:id="@+id/country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginBottom="@dimen/padding_20"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/black_night"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_value"
        tools:text="Россия" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_30"
        android:layout_marginBottom="@dimen/padding_8"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/duration_line"
        android:textColor="@color/grey"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/track_time" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_8"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/album_line"
        android:textColor="@color/grey"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_8"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/year_line"
        android:textColor="@color/grey"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_8"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/genre_line"
        android:textColor="@color/grey"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_marginBottom="@dimen/padding_20"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/country_line"
        android:textColor="@color/grey"
        android:textFontWeight="400"
        android:textSize="@dimen/size_13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre" />
</androidx.constraintlayout.widget.ConstraintLayout>